# hyperion-console

./: .gitignore  CMakeLists.txt  main.cpp
mathematica/: Efficiency Plots.nb  Figures of interest.pptx  MeanEfficiencyVSTowerHeight_CosAtt_AllFieldSizes_Lat-30.csv  MeanEfficiencyVSTowerHeight_CosAtt_AllLatitudes_FieldSize-1.3km2.csv  MeanEfficiencyVSTowerHeight_Cos_AllFieldSizes_Lat-30.csv  MeanEfficiencyVSTowerHeight_Cos_AllLatitudes_FieldSize-1.3km2.csv  comparison_full_field_half_fields.nb  comparison_full_fields.nb  comparison_half_field_half_fields.nb  efficiency_matrix.nb  ref_cases_comparison.nb  ref_cases_comparison_delta_t.nb  speed_improvements.txt
